--- a/css/master.css
+++ b/css/master.css
@@ -1,3 +1,15 @@
+.panel-control {
+	width: 500px;
+}
+
+.panel-control__button {
+	margin-top: 20px;
+}
+
+.panel-control__error {
+	color: #f77;
+}
+
 .indicator {
 	width: 500px;
 	margin-top: 20px;
@@ -22,7 +34,8 @@
 	position: absolute;
 	left: 0;
 	top:  0;
-	height: 20px;
+	padding-top: 1px;
+	height: 18px;
 	width:  100%;
 }
 
